2003-11-28  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/sectioning.h:
	* makeinfo/sectioning.c (current_sectioning_number)
	(current_sectioning_title): new functions.

	* makeinfo/sectioning.c (get_sectioning_number): moved space char at
	the end of numbers to ...
	(insert_and_underscore, sectioning_html): here.
	(get_sectioning_number, insert_and_underscore): keep track of the last
	number/title to be used by @float, @cindex like commands that need to
	know in which section they are used.

2003-11-27  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_math): new function that encloses @math
	statements in a math element in XML.

	* makeinfo/xml.c:
	* makeinfo/xml.h: new element math.

2003-11-27  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/float.c (cm_listoffloats): made the layout in Info output
	the same with indices.

2003-11-25  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/float.c (cm_listoffloats): generate a menu for Info, with
	automatically shortened captions.

2003-11-25  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_acronym): use acronym element for HTML.
	Report from: Torsten Bronger <bronger@physik.rwth-aachen.de>
	Tue, 25 Nov 2003 10:30:52 +0100.

2003-11-25  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/sectioning.c (cm_appendix): reset numbers only when
	changing enum_marker.

2003-11-25  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/index.c (cm_printindex): made Appendix matching locale
	aware.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/index.c (cm_printindex): also catch Appendix and A.1 kind
	of numbers with --no-headers Info output.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (cm_example):
	* makeinfo/xml.c (xml_insert_docbook_image, xml_begin_multitable):
	moved common floatenv handling to ...
	(xml_begin_docbook_float): here.

	* makeinfo/insertion.c (end_insertion, cm_smallexample, cm_lisp)
	(cm_smalllisp): insert FLOATEXAMPLE for Docbook if inside @float.

2003-11-24  Alper Ersoy  <dirt@gtk.org>
